--- a/stack.yaml
+++ b/stack.yaml
@@ -1,5 +1,7 @@
 resolver: lts-3.10
 
 extra-deps:
+  - resource-pool-catchio-0.2.1.0
   - snap-loader-dynamic-0.10.0.3
   - snap-loader-static-0.9.0.2
+  - snaplet-postgresql-simple-0.6.0.4
