--- a/react-haskell.cabal
+++ b/react-haskell.cabal
@@ -23,18 +23,21 @@ Executable react-haskell
   main-is: Main.hs
 
   Build-depends:
+    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
+    aeson                     >= 0.8     && < 0.11,
     bytestring                >= 0.9.1   && < 0.11,
     heist                     >= 0.14    && < 0.15,
-    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
     mtl                       >= 2       && < 3,
+    postgresql-simple         >= 0.4     && < 0.6,
     snap                      >= 0.13    && < 0.15,
     snap-core                 >= 0.9     && < 0.10,
-    snap-server               >= 0.9     && < 0.10,
+    snap-extras               >= 0.11    && < 0.12,
     snap-loader-static        >= 0.9     && < 0.10,
+    snap-server               >= 0.9     && < 0.10,
+    snaplet-postgresql-simple >= 0.6     && < 0.7,
     text                      >= 0.11    && < 1.3,
     time                      >= 1.1     && < 1.6,
-    xmlhtml                   >= 0.1     && < 0.3,
-    snaplet-postgresql-simple >= 0.6     && < 0.7
+    xmlhtml                   >= 0.1     && < 0.3
 
   if flag(old-base)
     build-depends:
