--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,11 @@
 resolver: lts-3.10
 
 extra-deps:
+  - digestive-functors-heist-0.8.6.2
+  - digestive-functors-snap-0.6.1.3
+  - readable-0.3.1
   - resource-pool-catchio-0.2.1.0
+  - snap-extras-0.11.0.1
   - snap-loader-dynamic-0.10.0.3
   - snap-loader-static-0.9.0.2
   - snaplet-postgresql-simple-0.6.0.4
