--- a/snaplets/postgresql-simple/devel.cfg.sample
+++ b/snaplets/postgresql-simple/devel.cfg.sample
@@ -2,7 +2,7 @@ host = "localhost"
 port = 5432
 user = "postgres"
 pass = ""
-db = "react-haskell"
+db = "react_haskell"
 
 # Nmuber of distinct connection pools to maintain.  The smallest acceptable
 # value is 1.
